# secure-auth-os

./: .env.example  .gitignore  README.md  cli.py  pyproject.toml  requirements.txt  vercel.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
app/: main.py
app/core/: config.py  dependencies.py  logging.py  security.py
app/db/: session.py
app/models/: audit_log.py  email_otp_challenge.py  password_history.py  password_reset_token.py  refresh_token.py  user.py
app/repositories/: audit_repository.py  token_repository.py  user_repository.py
app/routers/: auth.py  users.py
app/schemas/: auth.py  user.py  user_management.py
app/services/: audit_service.py  auth_service.py  email_otp_service.py  email_sender.py  mfa_service.py  os_auth.py  password_policy.py  rate_limiter.py  token_service.py
app/static/: index.html
app/utils/: validators.py
scripts/: cleanup_environments.py
tests/: conftest.py  test_auth_flow.py
